# airflow_ad_auth_manager

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
airflow_ad_auth_manager/: ad_auth_manager.py  azure_auth_manager.py
airflow_azure_auth_manager/: azure_auth_manager.py
