[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "airflow-ad-auth-manager"
version = "0.1.0"
description = "Azure AD Auth Manager for Apache Airflow 3.x"
authors = [
    { name = "Marcin Szymanski", email = "marcin.szymanski@crugroup.com" },
    { name = "Zakariah Nuccio", email = "zak.nuccio@crugroup.com" },
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "apache-airflow>=3",
    "PyJWT>=2.0.0",
    "requests>=2.0.0"
]

[project.urls]
Homepage = "https://github.com/crugroup/airflow-ad-auth-manager"

[tool.setuptools.packages.find]
where = ["."]
include = ["airflow_ad_auth_manager*"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "W",
    "DJ",
    "F",
    "I",
    "UP",
    "PL",
    "B",
    "Q",
]

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 13
